--- a/wednesday30-3-2022/style.css
+++ b/wednesday30-3-2022/style.css
@@ -4,12 +4,18 @@ body{
     padding: 0%;
     display: flex;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    background-image: url("https://images.unsplash.com/photo-1517816743773-6e0fd518b4a6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bW9kZXJuJTIwYmFja2dyb3VuZHxlbnwwfHwwfHw%3D&w=1000&q=80");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .container{
   width: 60%;
   margin-top: 8%;
   margin-left: 10%;
-  border: 2px solid slategray;
+  border: 2px solid rgba(255, 255, 255, 0.532);
+  border-radius: 2%;
+  background-color: rgba(255, 255, 255, 0.532);
 }
 .container1{
 box-sizing: border-box;
