last task localstorage is work

--- a/wednesday30-3-2022/style.css
+++ b/wednesday30-3-2022/style.css
@@ -9,62 +9,80 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
-.container{
-  width: 45%;
-  margin-top: 8%;
-  margin-left: 22%;
-  border: 2px solid rgba(255, 255, 255, 0.532);
-  border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.532);
-  padding:1% 2% 0 2%;
-}
-.container1{
-box-sizing: border-box;
-margin-left: 15%;
-margin-top: 5%;
-}
-#regestForm{
-    margin: 2% 5%;
+section {width: 80%;
+    margin: auto;
 }
 input{
-    width: 70%;
-    height: 3.5vh;
+    width: 50%;
+    height: 3vh;
     border: 2px solid palevioletred;
     margin-left: 2%;
+    margin-top: 2%;
     box-align: center;
     border: 2px solid palevioletred;
-    border-radius: 7px;
+    border-radius: 12px;
     padding-left: 2%;
     background-color: rgba(255, 255, 255, 0.388);
 }
-#sub{
-    background-color: rgba(216, 112, 147, 0.616);
-    color: white;
-    border: 1px solid rgba(216, 112, 147, 0.616);
-    border-bottom-right-radius: 50px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 5px;
-    margin-left:25%;
-    width: 50%;
+fieldset{
+    width: 55%;
+    margin-top: 8%;
+    margin-left: 22%;
+    border: 2px solid rgba(255, 255, 255, 0.532);
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.532);
+    padding:1% 2% 1% 2%;
+  }
+legend{
+    font-size: 1.8vw;
+    padding: 2% 3%;
+    color: purple;
 }
-label{
+  label{
+      color: purple;
+      font-size: larger;
+  }    
+  span {color:red;
+    font-size: medium;
+}
+.list {margin-left: 10px;}
+li {display: none;}
+
+#btn{
+  margin-left: 20%;
+  background-color:palevioletred ;
+  border-radius: 12px;
+  color: white;
+}
+  /* #welcoming{
+      background-color: rgba(216, 112, 147, 0.616);
+      color: white;
+      border: 1px solid rgba(216, 112, 147, 0.616);
+      border-bottom-right-radius: 50px;
+      border-bottom-left-radius: 5px;
+      border-top-left-radius: 50px;
+      border-top-right-radius: 5px;
+      margin-left:25%;
+      width: 50%;
+      margin-top: 1%;
+  } */
+  a{
+     color: white;
+      text-decoration: none;
+  }
+
+  /* //////////////index2//////////////// */
+
+  #welcomeFullName{
     color: purple;
     font-size: larger;
-}
-#welcoming{
-    background-color: rgba(216, 112, 147, 0.616);
-    color: white;
-    border: 1px solid rgba(216, 112, 147, 0.616);
-    border-bottom-right-radius: 50px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 5px;
-    margin-left:25%;
-    width: 50%;
-    margin-top: 1%;
-}
-a{
-   color: white;
-    text-decoration: none;
-}
+  }
+  #welcomeEmail{
+    color: palevioletred;
+  }
+  #show{
+      margin-left: 5%;
+      margin-top: 5%;
+     width: 100%;
+      padding: 1%;
+  }
